# datasette-checkbox

./: README.md  pyproject.toml
datasette_checkbox/: __init__.py
tests/: test_checkbox.py
