[project]
name = "datasette-checkbox"
version = "0.1a0"
description = "Add interactive checkboxes to columns in Datasette"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette>=1.0a15"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-checkbox"
Changelog = "https://github.com/datasette/datasette-checkbox/releases"
Issues = "https://github.com/datasette/datasette-checkbox/issues"
CI = "https://github.com/datasette/datasette-checkbox/actions"

[project.entry-points.datasette]
checkbox = "datasette_checkbox"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
